# pidgin

./: AUTHORS  COPYRIGHT  ChangeLog  ChangeLog.API  HACKING  Makefile.am  Makefile.in  Makefile.mingw  README  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  package_revision.h  pidgin.spec
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
doc/: Makefile.in  finch.1.in  pidgin.1.in  plugin-ids.dox
finch/: Makefile.in
finch/libgnt/: Makefile.in  gntmarshal.c  gntmarshal.h
finch/libgnt/wms/: Makefile.in
finch/plugins/: Makefile.in
libpurple/: Makefile.am  Makefile.in  conversation.c  ft.c  internal.h  marshallers.c  marshallers.h  mediamanager.c  network.c  proxy.c  purple-url-handler  server.c  stun.c  util.c  version.h  xmlnode.c
libpurple/ciphers/: Makefile.in
libpurple/data/gconf/: Makefile.in
libpurple/example/: Makefile.in
libpurple/fuzzers/: Makefile.am  Makefile.in  fuzz_base16_decode.c  fuzz_html_to_xhtml.c  fuzz_jabber_caps.c  fuzz_jabber_id_new.c  fuzz_markup_is_rtl.c  fuzz_markup_linkify.c  fuzz_markup_strip_html.c  fuzz_mime_decode_field.c  fuzz_quotedp_decode.c  fuzz_str_to_time.c  fuzz_xmlnode.c
libpurple/plugins/: Makefile.in
libpurple/plugins/mono/: Makefile.in
libpurple/plugins/perl/: Makefile.in
libpurple/plugins/ssl/: Makefile.in
libpurple/plugins/tcl/: Makefile.in
libpurple/protocols/: Makefile.in
libpurple/protocols/bonjour/: Makefile.in
libpurple/protocols/gg/: Makefile.in
libpurple/protocols/irc/: Makefile.in  cmds.c  dcc_send.c  irc.c  irc.h  msgs.c  parse.c
libpurple/protocols/jabber/: Makefile.am  Makefile.in  buddy.c  iq.c  (+12 more)
libpurple/tests/: Makefile.am  Makefile.in  test_jabber_jutil.c  test_util.c
libpurple/win32/: libc_interface.c
m4macros/: Makefile.in
pidgin/: Makefile.in  gtkblist.c  gtkconv.c  gtkdialogs.c  gtkimhtml.c  gtkprivacy.c
pidgin/data/: pidgin.appdata.xml.in  pidgin.desktop.in  pidgin.desktop.in.in
pidgin/pixmaps/: Makefile.in
pidgin/plugins/: Makefile.in  spellchk.c
po/: POTFILES  af.po  am.po  ar.po  ar_SA.po  as.po  ast.po  az.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  brx.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+56 more)
share/ca-certs/: Makefile.in  README.md
share/sounds/: Makefile.in
(+31 files in other folders)
